--- a/internal/build-constants/package.json
+++ b/internal/build-constants/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@lib-env/build-utils",
+  "name": "@lib-env/build-constants",
   "private": true,
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
@@ -8,10 +8,5 @@
     "build": "unbuild",
     "dev": "pnpm run stub",
     "stub": "unbuild --stub"
-  },
-  "devDependencies": {
-    "@vue/compiler-sfc": "^3.2.37",
-    "rollup-plugin-css-only": "^3.1.0",
-    "rollup-plugin-vue": "^6.0.0"
   }
 }
