--- a/internal/build-utils/package.json
+++ b/internal/build-utils/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "@vue/compiler-sfc": "^3.2.37",
     "rollup-plugin-css-only": "^3.1.0",
-    "rollup-plugin-vue": "^6.0.0"
+    "rollup-plugin-vue": "^6.0.0",
+    "ts-morph": "^15.1.0"
   }
 }
