--- a/tsconfig.env.json
+++ b/tsconfig.env.json
@@ -20,7 +20,9 @@
   },
   "include": [
     "typings/*.d.ts",
-    "internal/**/*.ts"
+    "internal/**/*.ts",
+    "packages/**/*.vue",
+    "packages/**/*.ts",
   ],
   "exclude": [
     "dist"
