--- a/docs/tsconfig.json
+++ b/docs/tsconfig.json
@@ -15,7 +15,7 @@
       "@vunk/form": ["../packages/entry"],
       "~/*": ["./.vitepress/vitepress/*"]
     },
-    "types": ["./typings/components"],
+    "types": ["./typings/element-plus"],
     "jsx": "preserve"
   },
   "include": ["**/*", ".vitepress/**/*"],
