--- a/docs/package.json
+++ b/docs/package.json
@@ -36,11 +36,12 @@
     "markdown-it-container": "^3.0.0",
     "octokit": "^2.0.3",
     "prismjs": "^1.28.0",
+    "sass": "^1.53.0",
     "unocss": "0.33.5",
     "unplugin-icons": "^0.14.6",
     "unplugin-vue-components": "^0.20.1",
     "unplugin-vue-define-options": "^0.6.1",
-    "vite": "^2.9.13",
+    "vite": "^3.0.1",
     "vite-plugin-inspect": "^0.5.0",
     "vite-plugin-mkcert": "^1.7.2",
     "vite-plugin-pwa": "^0.12.0",
