--- a/package.json
+++ b/package.json
@@ -13,10 +13,14 @@
 		"eslint-plugin-vue": "^9.2.0",
 		"gulp": "^4.0.2",
 		"sucrase": "^3.24.0",
+		"tsx": "^3.8.0",
 		"unbuild": "^0.7.4",
+		"vitest": "^0.18.1",
 		"vue": "^3.2.37"
 	},
 	"dependencies": {
+		"@element-plus/utils": "workspace:*",
+		"@vueuse/core": "^8.7.5",
 		"@vunk-core/components": "workspace:*",
 		"@vunk-core/shared": "workspace:*"
 	},
