--- a/docs/package.json
+++ b/docs/package.json
@@ -20,7 +20,8 @@
     "normalize.css": "^8.0.1",
     "nprogress": "^0.2.0",
     "prism-theme-vars": "^0.2.3",
-    "vue": "^3.2.37"
+    "vue": "^3.2.37",
+    "@vunk/core": "workspace:*"
   },
   "devDependencies": {
     "@crowdin/cli": "^3.7.8",
