--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"eslint-define-config": "^1.5.1",
 		"eslint-plugin-vue": "^9.2.0",
 		"gulp": "^4.0.2",
+		"mri": "^1.2.0",
 		"sucrase": "^3.24.0",
 		"tsx": "^3.8.0",
 		"unbuild": "^0.7.4",
@@ -21,9 +22,9 @@
 	"dependencies": {
 		"@element-plus/utils": "workspace:*",
 		"@vueuse/core": "^8.7.5",
-		"@vunk/core": "workspace:*",
 		"@vunk-core/components": "workspace:*",
-		"@vunk-core/shared": "workspace:*"
+		"@vunk-core/shared": "workspace:*",
+		"@vunk/core": "workspace:*"
 	},
 	"scripts": {
 		"dev": "pnpm run docs:dev",
@@ -32,6 +33,8 @@
 		"postinstall": "pnpm stub",
 		"docs:dev": "pnpm run -C docs dev",
 		"docs:build": "pnpm run -C docs build",
+
+		"cc": "gulp -f scripts/create/component/index.ts",
 		"run:test": "gulp -f scripts/test.ts"
 	}
 }
