--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
 		"postinstall": "pnpm stub",
 		"docs:dev": "pnpm run -C docs dev",
 		"docs:build": "pnpm run -C docs build",
+		
+		"publish": "gulp -f scripts/publish.ts",
 
 		"cc": "gulp -f scripts/create/component/index.ts",
 		"ccd": "gulp -f scripts/create/component-docs/index.ts",
