--- a/packages/entry/package.json
+++ b/packages/entry/package.json
@@ -1,8 +1,9 @@
 {
   "name": "@vunk/core",
-  "version": "0.0.0-alpha.0",
+  "version": "0.0.0-alpha.1",
   "description": "",
   "main": "index.ts",
+  "module": "index.esm.js",
   "scripts": {
     "build": "gulp -f gulpfile.ts"
   },
