merge-css-to-dist

--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
 		"eslint": "^8.19.0",
 		"eslint-define-config": "^1.5.1",
 		"eslint-plugin-vue": "^9.2.0",
+		"fast-glob": "^3.2.11",
 		"gulp": "^4.0.2",
+		"gulp-concat": "^2.6.1",
 		"mri": "^1.2.0",
 		"sucrase": "^3.24.0",
 		"tsx": "^3.8.0",
