--- a/tsconfig.env.json
+++ b/tsconfig.env.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "noUnusedLocals": true,
     "module": "ESNext",
-    "declaration": false,
+    "composite": true,
     "noImplicitAny": false,
     "removeComments": true,
     "moduleResolution": "node",
