--- a/package.json
+++ b/package.json
@@ -24,10 +24,10 @@
 	"dependencies": {
 		"@element-plus/utils": "workspace:*",
 		"@vueuse/core": "^8.7.5",
-		"@vunk-skzz/components": "workspace:*",
-		"@vunk-skzz/shared": "workspace:*",
+		"@skzz-app/components": "workspace:*",
+		"@skzz-app/shared": "workspace:*",
 		"@vunk/core": "0.0.0-alpha.2",
-		"@vunk/skzz": "workspace:*"
+		"@skzz/app": "workspace:*"
 	},
 	"scripts": {
 		"dev": "pnpm run docs:dev",
