--- a/docs/package.json
+++ b/docs/package.json
@@ -21,7 +21,7 @@
     "nprogress": "^0.2.0",
     "prism-theme-vars": "^0.2.3",
     "vue": "^3.2.37",
-    "@vunk/skzz": "workspace:*"
+    "@skzz/app": "workspace:*"
   },
   "devDependencies": {
     "@crowdin/cli": "^3.7.8",
