--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -24,13 +24,17 @@
         "src/components/*"
       ]
     },
-    "lib": ["esnext", "dom"]
+    "lib": ["esnext", "dom"],
+    "rootDir": "../"
   },
-  "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue", 
+  "include": [
+    "src/**/*.ts", 
+    "src/**/*.d.ts", 
+    "src/**/*.tsx", 
+    "src/**/*.vue", 
     "typings/**/*.d.ts",
+    "../typings/**/*.d.ts",
     "config/**/*.ts",
-    "utils/**/*.ts",
-    "vite.config.ts"
   ],
   "exclude": [
     "node_modules"
