--- a/packages/element-utils/package.json
+++ b/packages/element-utils/package.json
@@ -4,7 +4,7 @@
   "license": "MIT",
   "main": "index.ts",
   "peerDependencies": {
-    "vue": "^3.2.0"
+    "vue": "^3.2.x"
   },
   "dependencies": {
     "@vue/shared": "^3.2.37"
