--- a/app/package.json
+++ b/app/package.json
@@ -18,6 +18,8 @@
     "@vitejs/plugin-vue": "^2.3.3",
     "@vitejs/plugin-vue-jsx": "^1.3.10",
     "@vue/compiler-sfc": "^3.2.38",
+    "unocss": "0.33.5",
+    "unocss-preset-vunk": "^1.0.1",
     "vite-plugin-externals": "^0.5.0",
     "vite-plugin-svg-icons": "^2.0.1",
     "vue-tsc": "^0.40.5"
