--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
 		"sucrase": "^3.24.0",
 		"tsx": "^3.8.0",
 		"unbuild": "^0.7.4",
-		"vite": "^3.0.9",
+		"vite": "npm:vite@latest",
 		"vitest": "^0.18.1"
 	},
 	"dependencies": {
