--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
 		"@lib-env/eslint-config": "workspace:*",
 		"@lib-env/path": "workspace:*",
 		"@lib-env/shared": "workspace:*",
+		"@types/chrome": "^0.0.197",
 		"@types/gulp": "^4.0.9",
 		"@types/node": "^18.0.4",
 		"consola": "^2.15.3",
